# Advent-2024

./: CMakeLists.txt  Day01.cpp  Day02.cpp  Day02.txt  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp  Day10.cpp  Day10.txt  Day11.cpp  Day12.cpp  Day12.txt  Day13.cpp  Day13.txt  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  Day19.cpp  Day19.txt  Day20.cpp  Day21.cpp  Day22.cpp  README.md  Utils.h
