CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED True)


PROJECT(Advent-2021)
# SET(CMAKE_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../include)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/../lib)

ADD_EXECUTABLE(Day01 ${CMAKE_SOURCE_DIR}/Day01.cpp)
ADD_EXECUTABLE(Day02 ${CMAKE_SOURCE_DIR}/Day02.cpp)
ADD_EXECUTABLE(Day03 ${CMAKE_SOURCE_DIR}/Day03.cpp)
ADD_EXECUTABLE(Day04 ${CMAKE_SOURCE_DIR}/Day04.cpp)
ADD_EXECUTABLE(Day05 ${CMAKE_SOURCE_DIR}/Day05.cpp)
ADD_EXECUTABLE(Day06 ${CMAKE_SOURCE_DIR}/Day06.cpp)
ADD_EXECUTABLE(Day07 ${CMAKE_SOURCE_DIR}/Day07.cpp)
ADD_EXECUTABLE(Day08 ${CMAKE_SOURCE_DIR}/Day08.cpp)
ADD_EXECUTABLE(Day09 ${CMAKE_SOURCE_DIR}/Day09.cpp)
ADD_EXECUTABLE(Day10 ${CMAKE_SOURCE_DIR}/Day10.cpp)
ADD_EXECUTABLE(Day11 ${CMAKE_SOURCE_DIR}/Day11.cpp)
ADD_EXECUTABLE(Day12 ${CMAKE_SOURCE_DIR}/Day12.cpp)
ADD_EXECUTABLE(Day13 ${CMAKE_SOURCE_DIR}/Day13.cpp)
ADD_EXECUTABLE(Day14 ${CMAKE_SOURCE_DIR}/Day14.cpp)
ADD_EXECUTABLE(Day15 ${CMAKE_SOURCE_DIR}/Day15.cpp)
ADD_EXECUTABLE(Day16 ${CMAKE_SOURCE_DIR}/Day16.cpp)
ADD_EXECUTABLE(Day17 ${CMAKE_SOURCE_DIR}/Day17.cpp)
ADD_EXECUTABLE(Day18 ${CMAKE_SOURCE_DIR}/Day18.cpp)
ADD_EXECUTABLE(Day19 ${CMAKE_SOURCE_DIR}/Day19.cpp)
ADD_EXECUTABLE(Day20 ${CMAKE_SOURCE_DIR}/Day20.cpp)
ADD_EXECUTABLE(Day21 ${CMAKE_SOURCE_DIR}/Day21.cpp)
ADD_EXECUTABLE(Day22 ${CMAKE_SOURCE_DIR}/Day22.cpp)